# test-p1-064wip

./: .gitignore  README.md
src/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
src/backend/ai_service/: __init__.py  config.py  constants.py  routes.py
src/backend/ai_service/models/: __init__.py  campaign_generator.py  content_generator.py  keyword_recommender.py  performance_predictor.py
src/backend/ai_service/services/: __init__.py  inference.py  model_loader.py  optimization.py
src/backend/ai_service/tests/: __init__.py  test_inference.py  test_models.py
src/backend/analytics_service/: __init__.py  config.py  constants.py  routes.py
src/backend/analytics_service/models/: __init__.py  campaign_metrics.py  performance_data.py
src/backend/analytics_service/services/: __init__.py  aggregation.py  reporting.py
src/backend/analytics_service/tests/: __init__.py  test_aggregation.py  test_reporting.py
src/backend/api_gateway/: __init__.py  config.py  constants.py  routes.py
src/backend/api_gateway/middleware/: __init__.py  auth.py  rate_limiter.py
src/backend/api_gateway/services/: __init__.py  routing.py
src/backend/api_gateway/tests/: __init__.py  test_auth.py  test_rate_limiter.py
src/backend/audience_service/: __init__.py  config.py  constants.py  routes.py
src/backend/audience_service/models/: __init__.py  audience_segment.py  targeting_rules.py
src/backend/audience_service/services/: __init__.py  segmentation.py  targeting.py
src/backend/audience_service/tests/: __init__.py  test_segmentation.py  test_targeting.py
src/backend/campaign_service/: __init__.py  config.py  constants.py  routes.py
src/backend/campaign_service/models/: __init__.py  ad_group.py  campaign.py
src/backend/campaign_service/services/: __init__.py  campaign_generator.py  (+1 more)
src/backend/common/: __init__.py
src/backend/integration_service/: __init__.py  config.py  constants.py  routes.py
src/backend/scripts/: db_init.py  generate_keys.py  setup_dev.py  setup_prod.py
(+282 files in other folders)
