[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sales-intelligence-platform"
version = "1.0.0"
description = "AI-powered B2B digital advertising campaign automation platform"
authors = ["Sales Intelligence Platform Team <team@salesintelligenceplatform.com>"]
python = ">=3.11"

packages = [
    { include = "ai_service" },
    { include = "analytics_service" },
    { include = "api_gateway" },
    { include = "audience_service" },
    { include = "campaign_service" },
    { include = "common" },
    { include = "integration_service" }
]

[tool.poetry.dependencies]
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pydantic = "^2.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.11.0"
psycopg2-binary = "^2.9.0"
redis = "^4.6.0"
tensorflow = "^2.14.0"
torch = "^2.0.1"
numpy = "^1.24.0"
pandas = "^2.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
aiohttp = "^3.8.0"
prometheus-client = "^0.17.0"
opentelemetry-api = "^1.20.0"
kafka-python = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\.pyi?$"
extend-exclude = "/migrations/"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info", "migrations"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true